project/static/css/new.css
body {
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
}
a {
    color: #607c8b;
}
li{
    list-style-type: none;
}
button a{
    color:white;
}
input {
    border: none;
    font-size: 3rem;
    border-radius: 0.3rem;
    background: rgb(205, 205, 205);
    color: grey;
    text-align: left;
}
button {
    background: #607c8b;
    padding: 1rem;
    border-radius: 0.3rem;
    border: none;
    color: white;
}
ul {
    padding: 0px;
    text-decoration: none;
    list-style: none;
}
.container{
    display: flex;
    justify-content: space-around;
    align-items: flex-start;
    flex-wrap: wrap;
}
.inline {
    display: flex;
    justify-content: flex-end;
    align-items: flex-start;
}
.sh {
    background: none;
    color: #607c8b;
}
.slow{
    border-radius: 100rem;
}
.center-items{
    display: flex;
    justify-content: center;
    align-items: center;
}

/*NEWPOST
*********
*/
.legend {
    border-radius: 0.5rem;
    color: #607c8b;
}

.legend-word {
    color: rgb(201, 201, 201);
}

.legend span {
    margin:2px;
    padding:2px;
    border-radius: 0.2rem;
    background:rgba(0,0,0,0.1);
}
.autocomplete-suggestions{
    border-radius: 2px;
    text-align: right;
    padding:1rem;
    background: white;
}

.autocomplete-suggestions > *:hover {
    border-radius: 2px;
    background: #EBF4FD;
}

.display {
    border-radius: 0.2rem;
    background: rgb(246, 246, 246);
    margin:auto;
    padding:1rem;
}
.entrieslist li {
    padding: 1rem;
    margin: 1rem;
    background: white;
}

.entrieslist li a.nameanchor {
    font-weight: bold;
}

.modal-body, .modal-body form, .modal-body textarea {
    font-size: 2rem;
}

.modal-body button {
    margin-left: 1rem;
}

#tweet-message.form-control{
    height: 10rem;
}

.modal-body button {
    padding: 0.5rem;
    border-radius: 1px;
}

.modal-body textarea::placeholder {
    font-weight: lighter;
    font-style: italic;
    color: rgb(201, 201, 201);
}

.modal-body textarea:focus {
    box-shadow: none;
}

div.modal-content {
    position: relative;
    background-color: white;
    border-radius: 0.5rem;
}


/*NAVIGATION
*********
*/
.drop {
    z-index: 20;
}
.logo {
    max-width: 2rem;
    margin: 0.2rem;
    z-index: 20;
}
.logo * {
    max-width: 5rem;
}
.user {
    color: white;
}
.mynav a {
    color: white;
}
.right {
    display: flex;
    justify-content: space-between;
    align-items: center;
}
.right * {
    text-align: center;
    margin-right: 0.7rem;
    z-index: 11;
}
.new {
    display: flex;
    position: absolute;
    justify-content: center;
    margin: auto;
    left: 0;
    right: 0;
    z-index: 10;
    font-size: 1.5rem;
}
.mynav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background: linear-gradient(135deg, #3c6272, #294762);
    padding: 1rem 2rem;
    position: relative;
    z-index: 0;
}
input.search {
    width: 4.8rem;
    border-radius: 6rem;
    background: none;
    text-align: left;
    padding-right: 1rem;
    border-radius: 2px;
    margin-right: 1rem;
}
input.myinput.search {
    color:white;
    text-align: right;
    padding-right:5rem;
}
input.myinput.search:focus{
    width:20vw;
    background: rgba(255, 255, 255, 0.1);
}
div#navbarNavDropdown.navbar-collapse{
    border-color:none;
    border-image:none;
    box-shadow: none;
    border:0px;
    text-align: right;
}
i.nav-item{
    text-align: right;
}
#tag-modal input{
    padding:1rem;
    background:#f8f8f8;
    text-align: right;
    width:100%

}
.glyphicon-search{
    color: white;
    font-size: 4rem;
    padding: 0.5rem;
    margin-right: 2rem;
}
.navbar-toggler{
    color:white;
    text-align: center;
}
.nav-item{
    color:white;
}
.nav-item p{
    font-size: 1.5rem;
    padding-top:1rem;
    margin-top: 1rem;
}
.not-button{
    padding:0px;
    background: none;
    margin:0px;
}
.right-icon{
    margin:0;
}
.nav-small{
    background: linear-gradient(135deg, #3c6272, #294762);
    padding:1rem;
}
/*CONTENT
*********
*/
.content{
    margin:auto;
    width:60vw;
}
.login {
    display: flex;
    justify-content: space-around;
    align-items: center;
    flex-wrap: wrap-reverse;
    margin:2rem;
}
img.slow{
    margin:5rem;
}
.login input{
    font-size: 3rem;
    background:rgba(0,0,0,0.1);
    padding:0.5rem;
}
.new:hover {
    color: rgba(255, 255, 255, 0.8);
}
.modal-footer{
    border:0px
}

/* iPhone Portrait and Landscape */
@media only screen and (min-width: 100px) and (max-width: 768px) {
    body {
        font-size: 1rem;
    }
    .content {
        width: 95%;
        font-size: 2rem;
        padding:2rem;
    }
    .content.login{
        font-size: 1rem;
    }
    .logo img {
        max-width: 4rem;
    }
    .new {
        display: flex;
        justify-content: center;
        align-items: center;
        font-size: 1.5rem;
    }
    .right{
        justify-content: space-between;
        width: 120vw;
    }
    .legend {
        border-radius: 0.5rem;
        font-size: 2rem;
        padding: 0px;
        text-align: left;
    }
    .login{
        font-size: 2rem;
        justify-content: flex-start;
    }
    .login input{
        font-size: 2rem;
    }
    img{
        display:none;
    }
    textarea {
      width: 80%;
    }
}
/*iPad and Low Res Laptop*/
@media (min-width: 768px) and (max-width:1200px) {

    .content.login{
        width: 100%;
    }
    .content {
        width: 95%;
        font-size: 2rem;
        padding:2rem;
    }
    .display{
        width:95%;
    }
}
/*Large Display*/
@media (min-width: 1200px) and (max-width:1800px){
    .content.login{
        width: 100%;
    }
    .display{
        width:75%;
    }
}
/*CRAZY LARGE DISPLAy*/
@media (min-width: 1800px) {
    body{
        font-size: 2rem;
    }
    .new{
        font-size: 2.5rem;
    }
    .logo *{
        max-width: 7rem;
    }
    .content.login{
        width: 100%;
    }
    .display{
        width:65%;
    }
    .glyphicon-search{
        color: white;
        font-size: 5rem;
        padding: 0.5rem;
        margin-right: 3rem;
    }
    input.myinput.search{
        font-size: 3.5rem;
    }
}
/* KEYFRAMES
*********/
.button-hover {
    cursor: pointer;
    display: inline-block;
    vertical-align: middle;
    transform: perspective(1px) translateZ(0);
    transition-duration: 0.3s;
    transition-property: transform;
    transition-timing-function: ease-out;
}
.button-hover:hover, .button-hover:focus, .button-hover:active {
    transform: translateY(3px);
}

